--- a/index.html
+++ b/index.html
@@ -9,11 +9,13 @@
 </body>
 <script>
 $.ajax({
-          type: "POST",
-          url: 'http://localhost:8080/api/1/location',
+          type: "GET",
+          url: 'https://maps.googleapis.com/maps/api/directions/json?origin=75+9th+Ave+New+York,+NY&destination=MetLife+Stadium+1+MetLife+Stadium+Dr+East+Rutherford,+NJ+07073&key=AIzaSyDKxDdzzYAtOJDb-rgiJIRJy-w-Fcr1wOM',
           data: {
-              'lat': 1,
-							'long': 1
+              'origin': "75 9th Ave, New York, NY",
+							'destination': "MetLife Stadium Dr East Rutherford, NJ 07073",
+							'mode': 'driving',
+							'key': 'AIzaSyDKxDdzzYAtOJDb-rgiJIRJy-w-Fcr1wOM'
           },
           dataType:'json',
           success: function(data){
